# agentx

./: .gitignore  AGENTX_IMPLEMENTATION_PLAN.md  README.md  agentx-wireframes-v7.html  pyproject.toml  requirements.txt  setup.bat  start-backend.bat  start-local.bat
agentx-ui/: index.html  package-lock.json  package.json  vite.config.ts
agentx-ui/src/: main.ts
agentx-ui/src/app/: agentx-app.ts
agentx-ui/src/components/assistant/: assistant-panel.ts
agentx-ui/src/components/shared/: kpi-tile.ts  step-tracker.ts
agentx-ui/src/constants/: index.ts
agentx-ui/src/services/: api-client.ts  ws-client.ts
agentx-ui/src/styles/: enterprise.css  global.css  tokens.css  utilities.css
agentx-ui/src/utils/: idp-display.ts  light-dom.ts
agentx-ui/src/views/: audit-view.ts  configuration-view.ts  dashboard-view.ts  exceptions-view.ts  queue-view.ts  workbench-view.ts
data/review/: test_order.json
schemas/: intake_json_template.json
scripts/: bootstrap_backend.py  setup.ps1  start-backend.ps1  start-local.ps1
seed/: demo_data.json
src/agentx/: __init__.py  config.py  main.py
src/agentx/api/: routes.py  serializers.py  ws_manager.py
src/agentx/db/: engine.py  schema.py  seed.py
src/agentx/db/repositories/: metrics_repo.py  (+1 more)
src/agentx/domain/: enums.py  models.py
src/agentx/workers/: folder_poller.py  pipeline_runner.py
src/recon_service/: config.py  main.py  models.py  validator.py
tests/: test_fund_validation.py  test_graph_pipeline.py  test_idp_schema.py  test_ops_metrics.py  test_recon_service.py  test_reconcile_agent.py  test_routing_rules.py
(+33 files in other folders)
