[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentx"
version = "0.1.0"
description = "AgentX STP platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint>=2.0.0",
  "langchain-core>=0.3.0",
  "pyyaml>=6.0",
  "httpx>=0.27.0",
  "openpyxl>=3.1.0",
  "langdetect>=1.0.9",
  "sse-starlette>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
